--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-gitbook
 # Configurations
 title:            Jekyll Gitbook
 longtitle:        Jekyll Gitbook
