--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://gracesjy.github.io/raymond.github.io/'
+url:              'https://gracesjy.github.io/hp/'
 baseurl:          ''
 rss:              RSS
 
