--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
+title:            Raymond Title
+longtitle:        Raymond Long Title
 author:           HE Tao
-email:            sighingnow@gmail.com
+email:            gracesjy@naver.com
 description: >
-  Build Jekyll site with the GitBook style.
+  Raymond Interested Dev. Repositories.
 
 version:          1.0
 gitbook_version:  3.2.3
