--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Configurations
-title:            Raymond Title
-longtitle:        Raymond Long Title
-author:           HE Tao
+title:            Raymond Portfolio
+longtitle:        Raymond Portfolio
+author:           Raymond
 email:            gracesjy@naver.com
 description: >
   Raymond Interested Dev. Repositories.
