--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,6 @@ plugins:
   - jemoji
 
 fontsettings:
-  theme: night   # 또는 sepia
+  theme: sepia   # 또는 sepia
   family: sans   # serif 또는 sans 중 선택
   size: 2        # 0~4 사이 숫자
